# riscv32-freertos

./: .gitignore  Makefile.am  build.sh  configure.ac  test.c
kernel/include/: FreeRTOSConfig.h
kernel/portable/GCC/RISC-V/: freertos_risc_v_chip_specific_extensions.h
